重构订单部分